--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -66,6 +66,12 @@
                     <span class="title">Đăng bán</span>
                 </a>
             </li>
+            <li class="nav-item  ">
+                <a href="/account/vote" class="nav-link nav-toggle">
+                    <i class="fa fa-comment-o"></i>
+                    <span class="title">Đánh giá</span>
+                </a>
+            </li>
             <li class="heading">
                 <h3 class="uppercase">Pages</h3>
             </li>
