--- a/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Vanp.DAL.Entites
 @model Product
 @{
-    ViewBag.Title = "Update";
+    ViewBag.Title = "Sửa thông tin sản phẩm";
     Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
 }
 
@@ -33,11 +33,15 @@
             <label for="price">Giá mua ngay </label>
             <input type="text" name="Price" class="form-control" id="price" value="@Model.Price" readonly>
         </div>
+        <div class="form-group col-md-4">
+            <label for="price">Bước giá</label>
+            <input type="text" name="Price" class="form-control" id="price" value="@Model.PriceStep" readonly>
+        </div>
     </div>
     <div class="row">
         <div class="form-group col-md-4">
             <label for="categoryid">Danh mục</label>
-            <select>
+            <select disabled>
                 <option>
                     @if (Model.Category != null)
                     {
@@ -45,7 +49,19 @@
                     }
                 </option>
             </select>
-
+        </div>
+        <div class="form-group col-md-3">
+            <label for="categoryid">Gia hạn</label>
+            <select disabled>
+                @if (Convert.ToBoolean(Model.IsExtended))
+                {
+                    <option>Có</option>
+                }
+                else
+                {
+                    <option>Không </option>
+                }
+            </select>
         </div>
     </div>
     <div class="row">
