--- a/Vanp.Web/Views/Shared/_Layout.cshtml
+++ b/Vanp.Web/Views/Shared/_Layout.cshtml
@@ -627,7 +627,7 @@
     <script type="text/javascript" src="~/Scripts/common.js"></script>
     <script type="text/javascript" src="~/Scripts/owl.carousel.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.mobile-menu.min.js"></script>
-
+    <script type="text/javascript" src="~/Scripts/cloud-zoom.js"></script>
     <script src="~/Scripts/jquery.blockUI.js"></script>
     <script src="~/Scripts/ladda/spin.min.js"></script>
     <script src="~/Scripts/ladda/ladda.min.js"></script>
