Top 5 sản phẩm có giá cao nhất

--- a/Vanp.Web/Views/Home/Index.cshtml
+++ b/Vanp.Web/Views/Home/Index.cshtml
@@ -110,10 +110,10 @@
             </div>
         </div>
     </div>
-    <!-- End Banner Blog -->
+    <!-- ProductsTop5Bid -->
     <div class="container">
         <div class="row">
-            <!-- Popular Products -->
+
             <div class="col-md-12">
                 <div class="bestsell-pro">
                     <div class="slider-items-products">
@@ -126,7 +126,26 @@
             </div>
         </div>
     </div>
-    <!--Popular Products end-->
+    <!-- End ProductsTop5Bid -->
+    <!------------------------------->
+    <!-- ProductsTop5Bid -->
+    <div class="container">
+        <div class="row">
+            <!-- Popular Products -->
+            <div class="col-md-12">
+                <div class="bestsell-pro">
+                    <div class="slider-items-products">
+                        <div class="bestsell-block">
+                            <div class="h2 products-section-title">Sản phẩm được ra giá cao nhất</div>
+                            @Html.Action("ProductsTop5Price", "Home")
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End ProductsTop5Bid -->
+
     <!--home banner-->
     <div class="bottom-banner-section">
         <div class="container"> <img alt="banner" src="~/images/bottom-banner.jpg"> </div>
