--- a/Vanp.Web/Views/Shared/_ProductCommentsPartial.cshtml
+++ b/Vanp.Web/Views/Shared/_ProductCommentsPartial.cshtml
@@ -21,7 +21,7 @@
 
 <div class="category-products">
     <ol class="product-template" style="display:none">
-        <li class="item">
+        <li class="item ">
             <div class="product-image"> <a href="product_detail.html" title="product lapen casen"> <img class="small-image" src="~/images/products/product1.jpg" alt="product lapen casen"> </a> </div>
             <div class="product-shop">
                 <div class="row product-top">
@@ -47,7 +47,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="row product-bottom">
                     <div class="col-md-12">
@@ -60,8 +59,30 @@
                     </div>
                 </div>
                 <div class="actions">
-                    <button type="submit" title="Submit" class="button button-wishlist"><span>Yêu Thích</span></button>
+                    <button type="submit" title="Submit" class="button button-vote"><span>Đánh Giá</span></button>
                 </div>
+
+            </div>
+            <div class="clearfix comment">
+
+                <div class="comment-wrapper" id="post-29">
+                    <div class="comment-author vcard">
+                        <p class="gravatar">
+                            <a href="#"><img width="60" height="60" alt="avatar" src="/images/users/admin.jpg"></a>
+                            <span class="vote">-1</span>
+                        </p>
+
+                        <span class="author">John Doe</span>
+                    </div>
+                    <!--comment-author vcard-->
+                    <div class="comment-meta">
+                        <time datetime="2014-07-10T07:26:28+00:00" class="entry-date">Thu, Jul 10, 2014 07:26:28 am</time>
+                        .
+                    </div>
+                    <!--comment-meta-->
+                    <div class="comment-body"> Curabitur at vestibulum sem. Aliquam vehicula neque ac nibh suscipit ultrices. Morbi interdum accumsan arcu nec scelerisque ellentesque id erat sem, ut commodo nulla. Sed a nulla et eros fringilla. Phasellus eget purus nulla. </div>
+                </div>
+
             </div>
         </li>
     </ol>
@@ -83,8 +104,7 @@
             </div>
         </li>
     </ol>
-    <ol class="products-list" id="products-list">
-    </ol>
+    <ol class="products-list" id="products-list"></ol>
     <div class="text-center">
         <button type="button" class="button btn btn-primary btn-load-more margin-15">Xem thêm</button>
     </div>
