--- a/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Shared/_CustomerLayout.cshtml
@@ -77,17 +77,17 @@
                 </a>
                 <ul class="sub-menu">
                     <li class="nav-item  ">
-                        <a href="layout_blank_page.html" class="nav-link ">
+                        <a href="/account/wishlist" class="nav-link ">
                             <span class="title">Yêu Thích</span>
                         </a>
                     </li>
                     <li class="nav-item  ">
-                        <a href="layout_ajax_page.html" class="nav-link ">
+                        <a href="/account/bidding" class="nav-link ">
                             <span class="title">Đang Tham Gia Đấu Giá</span>
                         </a>
                     </li>
                     <li class="nav-item  ">
-                        <a href="layout_ajax_page.html" class="nav-link ">
+                        <a href="/account/bidsuccess" class="nav-link ">
                             <span class="title">Đã Thắng</span>
                         </a>
                     </li>
