Top 5 sản phẩm gần kết thúc

--- a/Vanp.Web/Views/Home/Index.cshtml
+++ b/Vanp.Web/Views/Home/Index.cshtml
@@ -158,176 +158,7 @@
         <div class="slider-items-products">
             <div class="featured-block">
                 <p class="h2 products-section-title"> <span>Today Deals</span> </p>
-                <div id="featured-slider" class="product-flexslider hidden-buttons">
-                    <div class="slider-items slider-width-col4 products-grid block-content">
-                        <div class="item col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="item-inner">
-                                <div class="item-img col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="item-img-info">
-                                        <a class="product-image" title="Nartina Round" href="../product_detail.html"> <img alt="Sample" src="~/images/products/product3.jpg"> </a>
-                                        <div class="new-label new-top-right">new</div>
-                                    </div>
-                                </div>
-                                <div class="item-info col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="info-inner">
-                                        <div class="item-title"> <a title="Sample" href="../product_detail.html"> Nartina Round </a> </div>
-                                        <div class="rating">
-                                            <div class="ratings">
-                                                <div class="rating-box">
-                                                    <div style="width:80%" class="rating"></div>
-                                                </div>
-                                                <p class="rating-links"> <a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                            </div>
-                                        </div>
-                                        <div class="item-content">
-                                            <div class="item-price">
-                                                <div class="price-box"> <span class="regular-price"> <span class="price">$125.00</span> </span> </div>
-                                                <p class="product-desc"> Printed chiffon knee length dress with tank straps. Deep v-neckline.</p>
-                                            </div>
-                                            <div class="action">
-                                                <!-- <button class="button btn-cart" type="button" title="" data-original-title="Add to Cart"><span>Add to Cart</span> </button>-->
-                                            </div>
-                                            <div class="box-hover">
-                                                <ul class="add-to-links">
-                                                    <li><a class="link-quickview" href="../quick_view.html"></a> </li>
-                                                    <li><a class="link-wishlist" href="../wishlist.html"></a> </li>
-                                                    <li><a class="link-compare" href="../compare.html"></a> </li>
-                                                    <li><a class="add-to-cart" href="../shopping_cart.html"></a> </li>
-                                                </ul>
-                                            </div>
-                                            <div class="box-timer">
-                                                <div class="countbox_1 timer-grid"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Item -->
-                        <div class="item col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="item-inner">
-                                <div class="item-img col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="item-img-info"> <a class="product-image" title="Ladder Back Chair" href="../product_detail.html"> <img alt="sample" src="~/images/products/product2.jpg"> </a> </div>
-                                </div>
-                                <div class="item-info col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="info-inner">
-                                        <div class="item-title"> <a title="sample" href="../product_detail.html"> Ladder Back Chair </a> </div>
-                                        <div class="item-content">
-                                            <div class="rating">
-                                                <div class="ratings">
-                                                    <div class="rating-box">
-                                                        <div style="width:80%" class="rating"></div>
-                                                    </div>
-                                                    <p class="rating-links"> <a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                </div>
-                                            </div>
-                                            <div class="item-price">
-                                                <div class="price-box"> <span class="regular-price"> <span class="price">$235.00</span> </span> </div>
-                                                <p class="product-desc"> Printed chiffon knee length dress with tank straps. Deep v-neckline.</p>
-                                            </div>
-                                            <div class="action">
-                                                <!--  <button class="button btn-cart" type="button" title="" data-original-title="Add to Cart"><span>Add to Cart</span> </button>-->
-                                            </div>
-                                            <div class="box-hover">
-                                                <ul class="add-to-links">
-                                                    <li><a class="link-quickview" href="../quick_view.html"></a> </li>
-                                                    <li><a class="link-wishlist" href="../wishlist.html"></a> </li>
-                                                    <li><a class="link-compare" href="../compare.html"></a> </li>
-                                                    <li><a class="add-to-cart" href="../shopping_cart.html"></a> </li>
-                                                </ul>
-                                            </div>
-                                            <div class="box-timer">
-                                                <div class="countbox_1 timer-grid"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Item -->
-                        <div class="item col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="item-inner">
-                                <div class="item-img col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="item-img-info"> <a class="product-image" title="Wing Chair" href="../product_detail.html"> <img alt="sample" src="~/images/products/product9.jpg"> </a> </div>
-                                </div>
-                                <div class="item-info col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="info-inner">
-                                        <div class="item-title"> <a title="sample" href="../product_detail.html"> Wing Chair </a> </div>
-                                        <div class="item-content">
-                                            <div class="rating">
-                                                <div class="ratings">
-                                                    <div class="rating-box">
-                                                        <div style="width:80%" class="rating"></div>
-                                                    </div>
-                                                    <p class="rating-links"> <a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                </div>
-                                            </div>
-                                            <div class="item-price">
-                                                <div class="price-box"> <span class="regular-price"> <span class="price">$235.00</span> </span> </div>
-                                                <p class="product-desc"> Printed chiffon knee length dress with tank straps. Deep v-neckline.</p>
-                                            </div>
-                                            <div class="action">
-                                                <!--  <button class="button btn-cart" type="button" title="" data-original-title="Add to Cart"><span>Add to Cart</span> </button>-->
-                                            </div>
-                                            <div class="box-hover">
-                                                <ul class="add-to-links">
-                                                    <li><a class="link-quickview" href="../quick_view.html"></a> </li>
-                                                    <li><a class="link-wishlist" href="../wishlist.html"></a> </li>
-                                                    <li><a class="link-compare" href="../compare.html"></a> </li>
-                                                    <li><a class="add-to-cart" href="../shopping_cart.html"></a> </li>
-                                                </ul>
-                                            </div>
-                                            <div class="box-timer">
-                                                <div class="countbox_1 timer-grid"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Item -->
-                        <div class="item col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="item-inner">
-                                <div class="item-img col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="item-img-info"> <a class="product-image" title="Klismos Chair" href="../product_detail.html"> <img alt="Epson L360 Printer" src="~/images/products/product5.jpg"> </a> </div>
-                                </div>
-                                <div class="item-info col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="info-inner">
-                                        <div class="item-title"> <a title="Epson L360 Printer" href="../product_detail.html"> Klismos Chair </a> </div>
-                                        <div class="item-content">
-                                            <div class="rating">
-                                                <div class="ratings">
-                                                    <div class="rating-box">
-                                                        <div style="width:80%" class="rating"></div>
-                                                    </div>
-                                                    <p class="rating-links"> <a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                </div>
-                                            </div>
-                                            <div class="item-price">
-                                                <div class="price-box"> <span class="regular-price"> <span class="price">$325.00</span> </span> </div>
-                                                <p class="product-desc"> Printed chiffon knee length dress with tank straps. Deep v-neckline.</p>
-                                            </div>
-                                            <div class="action">
-                                                <!--   <button class="button btn-cart" type="button" title="" data-original-title="Add to Cart"><span>Add to Cart</span> </button>-->
-                                            </div>
-                                            <div class="box-hover">
-                                                <ul class="add-to-links">
-                                                    <li><a class="link-quickview" href="../quick_view.html"></a> </li>
-                                                    <li><a class="link-wishlist" href="../wishlist.html"></a> </li>
-                                                    <li><a class="link-compare" href="../compare.html"></a> </li>
-                                                    <li><a class="add-to-cart" href="../shopping_cart.html"></a> </li>
-                                                </ul>
-                                            </div>
-                                            <div class="box-timer">
-                                                <div class="countbox_1 timer-grid"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @Html.Action("ProductsTop5DateTo", "Home")
             </div>
         </div>
     </div>
