--- a/Vanp.Web/Views/Home/ProductsTop5Bid.cshtml
+++ b/Vanp.Web/Views/Home/ProductsTop5Bid.cshtml
@@ -10,8 +10,8 @@
                     <div class="productborder">
                         <div class="item-img">
                             <div class="item-img-info">
-                                <a class="product-image" title="iPhone 6 Plus" href="../@p.PriceDefault"> 
-                                <img alt="iPhone 6 Plus" src="@p.ProductImagePath" title="@p.ProductName"> 
+                                <a class="product-image" title="@p.ProductName" href="../@p.PriceDefault"> 
+                                <img alt="@p.ProductName" src="@p.ProductImagePath" title="@p.ProductName"> 
                                 </a>    
                                 <div class="new-label new-top-right">new</div>
                                 <div class="quickview top-right"> <a class="link-quickview" href="../quick_view.html"> <i class="fa fa-search" aria-hidden="true"></i></a> </div>
