--- a/Vanp.Web/Views/Home/Index.cshtml
+++ b/Vanp.Web/Views/Home/Index.cshtml
@@ -145,7 +145,6 @@
         </div>
     </div>
     <!-- End ProductsTop5Bid -->
-
     <!--home banner-->
     <div class="bottom-banner-section">
         <div class="container"> <img alt="banner" src="~/images/bottom-banner.jpg"> </div>
@@ -157,7 +156,7 @@
     <div class="featured-pro">
         <div class="slider-items-products">
             <div class="featured-block">
-                <p class="h2 products-section-title"> <span>Today Deals</span> </p>
+                <p class="h2 products-section-title"> <span>Sản phẩm đáu giá gần kết thúc</span> </p>
                 @Html.Action("ProductsTop5DateTo", "Home")
             </div>
         </div>
