--- a/Vanp.Web/Views/Home/ProductsTop5Bid.cshtml
+++ b/Vanp.Web/Views/Home/ProductsTop5Bid.cshtml
@@ -1,4 +1,4 @@
-﻿@using Vanp.Web.Models
+﻿/.@using Vanp.Web.Models
 
 @model IEnumerable<ProductModel>
 <div id="bestsell-slider" class="product-flexslider hidden-buttons">
