--- a/Vanp.Web/Views/Category/Delete.cshtml
+++ b/Vanp.Web/Views/Category/Delete.cshtml
@@ -1,4 +1,82 @@
-﻿
-@{
-    ViewBag.Title = "Delete Catelory";
-}
+﻿/.@using Vanp.Web.Models
+
+@model IEnumerable<ProductModel>
+<h1 class="page-title">
+    Danh Sách Danh Mục
+    <small>Thêm, Sửa, Xóa Danh Mục</small>
+</h1>
+<div class="table-toolbar">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="btn-group">
+                <button id="add-new" class="btn sbold green" onclick="insert(this)">
+                    Thêm Mới
+                    <i class="fa fa-plus"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<table class="table table-striped table-bordered table-hover table-checkable order-column" id="table-main">
+    <thead>
+        <tr>
+            <th> </th>
+            <th> </th>
+            <th> Danh Mục </th>
+            <th> Danh Mục Cha </th>
+            <th> Level</th>
+            <th> Ngày Cập Nhật </th>
+            <th> Trạng Thái</th>
+        </tr>
+    </thead>
+</table>
+<div class="modal fade" id="basic" tabindex="-1" role="basic" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form class="form-horizontal category-form">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                    <h4 class="modal-title">Thông Tin Danh Mục</h4>
+                </div>
+                <div class="modal-body">
+                    <input type="hidden" name="id" class="id" />
+                    <div class="form-group">
+                        <label class="control-label col-md-4">
+                            Tên Danh Mục
+                            <span class="required" aria-required="true"> * </span>
+                        </label>
+                        <div class="col-md-8">
+                            <input type="text" name="name" data-required="1" class="form-control name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-4">
+                            Danh Mục Cha
+                        </label>
+                        <div class="col-md-8">
+                            <select name="parent" data-required="1" class="form-control select2 parent"></select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-4">
+                            Ẩn / Hiện
+                        </label>
+                        <div class="col-md-8">
+                            <div class="mt-checkbox-list margin-top-10">
+                                <label class="mt-checkbox">
+                                    <input type="checkbox" value="1" name="show" checked class="show"> Hiện
+                                    <span></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn dark btn-outline" data-dismiss="modal">Close</button>
+                    <button type="submit" name="btnSubmit" class="btn green btn-submit">Lưu</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
