--- a/Vanp.Web/Views/Category/Delete.cshtml
+++ b/Vanp.Web/Views/Category/Delete.cshtml
@@ -10,7 +10,7 @@
         <div class="col-md-6">
             <div class="btn-group">
                 <button id="add-new" class="btn sbold green" onclick="insert(this)">
-                    C
+                    Thêm Mới 
                     <i class="fa fa-plus"></i>
                 </button>
             </div>
@@ -24,9 +24,9 @@
             <th> </th>
             <th> Danh Mục </th>
             <th> Danh Mục Cha </th>
-            <th> Level</th>
+            <th> Level </th>
             <th> Ngày Cập Nhật </th>
-            <th> Trạng Thái</th>
+            <th> Trạng Thái </th>
         </tr>
     </thead>
 </table>
@@ -79,4 +79,4 @@
             </form>
         </div>
     </div>
-</div>
+
